Refactorización de valores hardcodeados del sistema de diseño de Wo

--- a/deck-wo-automatizacion/index.html
+++ b/deck-wo-automatizacion/index.html
@@ -30,7 +30,7 @@
   <!-- Google Fonts with font-display swap -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Workalógico Design System -->
   <link rel="stylesheet" href="../wo-design-system.css">
@@ -51,7 +51,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 1: PORTADA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Portada">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Portada">
         <div class="wo-cover">
           <img data-src="../LOGOS/logo dark@3x.png" alt="Workalógico" class="wo-cover__logo" loading="lazy">
           <div class="wo-badge" role="text">Enterprise</div>
@@ -85,7 +85,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 2: EL PROBLEMA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="El problema">
+      <section data-background-color="#1a1a1e" aria-label="El problema">
         <h2>El Costo del <span class="danger">Trabajo Manual</span></h2>
         <div class="wo-metrics-row" role="list" aria-label="Métricas del problema">
           <div class="wo-metric wo-metric--danger fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -115,7 +115,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 3: SECCIÓN - SOLUCIÓN
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="linear-gradient(135deg, #0F0F1A 0%, #252542 100%)" data-particles="true" aria-label="Nuestra solución">
+      <section data-background-gradient="linear-gradient(135deg, #1a1a1e 0%, #333333 100%)" data-particles="true" aria-label="Nuestra solución">
         <h1 class="wo-section__title">Automatiza lo <span class="accent">Repetitivo</span></h1>
         <p class="wo-section__subtitle">Tu equipo humano se enfoca en estrategia. La computadora para ejecutar estos procesos.</p>
         
@@ -128,7 +128,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 4: DIFERENCIADORES
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Diferenciadores">
+      <section data-background-color="#1a1a1e" aria-label="Diferenciadores">
         <h2>¿Por qué <span class="accent">Workalógico</span>?</h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -157,7 +157,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 5: DEMO INTERACTIVO - FLUJO ANIMADO
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" data-state="flow-slide" aria-label="Demo de flujo">
+      <section data-background-color="#1a1a1e" data-state="flow-slide" aria-label="Demo de flujo">
         <h2 style="margin-bottom: 0.3em;">Así fluye tu <span class="accent">Proceso</span></h2>
         <p style="color: var(--wo-text-secondary); font-size: 0.75em; margin-bottom: 0.8em;">
           Visualización de un flujo de automatización de ventas
@@ -189,7 +189,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: CASOS DE USO
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Casos de uso">
+      <section data-background-color="#1a1a1e" aria-label="Casos de uso">
         <h2>Qué <span class="accent">Automatizamos</span></h2>
         <div class="wo-grid wo-grid--2" role="list">
           <div class="wo-card fragment fade-up" data-fragment-index="1" role="listitem">
@@ -227,7 +227,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: HERRAMIENTAS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Herramientas">
+      <section data-background-color="#1a1a1e" aria-label="Herramientas">
         <h2>Stack <span class="accent">Tecnológico</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -269,7 +269,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 7: PROCESO
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Proceso">
+      <section data-background-color="#1a1a1e" aria-label="Proceso">
         <h2>Cómo <span class="accent">Trabajamos</span></h2>
         <ul class="wo-steps" role="list">
           <li class="fragment fade-up" data-fragment-index="1" role="listitem"><strong>Auditoría:</strong> Mapeamos tus procesos actuales. Identificamos candidatos a automatizar.</li>
@@ -291,7 +291,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 8: PRECIOS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Paquetes y precios">
+      <section data-background-color="#1a1a1e" aria-label="Paquetes y precios">
         <h2>Paquetes de <span class="accent">Automatización</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -334,7 +334,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 9: CTA / CIERRE
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Llamado a la acción">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Llamado a la acción">
         <div class="wo-cta">
           <h1 class="wo-cta__title">¿Listo para <span class="accent">automatizar</span>?</h1>
           <p class="wo-cta__subtitle">Agenda tu auditoría de procesos gratuita</p>
