--- a/deck-wo-crm/index.html
+++ b/deck-wo-crm/index.html
@@ -30,7 +30,7 @@
   <!-- Google Fonts with font-display swap -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Workalógico Design System -->
   <link rel="stylesheet" href="../wo-design-system.css">
@@ -48,7 +48,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 1: PORTADA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Portada">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Portada">
         <div class="wo-cover">
           <img data-src="../LOGOS/logo dark@3x.png" alt="Workalógico" class="wo-cover__logo" loading="lazy">
           <div class="wo-badge" role="text">Enterprise</div>
@@ -82,7 +82,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 2: EL PROBLEMA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="El problema">
+      <section data-background-color="#1a1a1e" aria-label="El problema">
         <h2>El CRM que <span class="danger">Nadie Usa</span></h2>
         <div class="wo-metrics-row" role="list" aria-label="Métricas del problema">
           <div class="wo-metric wo-metric--danger fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -111,7 +111,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 3: SECCIÓN - SOLUCIÓN
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="linear-gradient(135deg, #0F0F1A 0%, #252542 100%)" data-particles="true" aria-label="Nuestra solución">
+      <section data-background-gradient="linear-gradient(135deg, #1a1a1e 0%, #333333 100%)" data-particles="true" aria-label="Nuestra solución">
         <h1 class="wo-section__title">CRM que <span class="accent">Funciona</span></h1>
         <p class="wo-section__subtitle">Implementación centrada en adopción, no en features.</p>
         
@@ -124,7 +124,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 4: DIFERENCIADORES
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Diferenciadores">
+      <section data-background-color="#1a1a1e" aria-label="Diferenciadores">
         <h2>¿Por qué <span class="accent">Workalógico</span>?</h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -153,7 +153,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 5: DEMO INTERACTIVO - MAPA DE INTEGRACIONES
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" data-state="integrations-slide" aria-label="Demo integraciones">
+      <section data-background-color="#1a1a1e" data-state="integrations-slide" aria-label="Demo integraciones">
         <h2 style="margin-bottom: 0.3em;">Ecosistema <span class="accent">Integrado</span></h2>
         <p style="color: var(--wo-text-secondary); font-size: 0.75em; margin-bottom: 0.5em;">
           Tu CRM conectado con todas tus herramientas
@@ -179,7 +179,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: PLATAFORMAS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Plataformas">
+      <section data-background-color="#1a1a1e" aria-label="Plataformas">
         <h2>Plataformas que <span class="accent">Implementamos</span></h2>
         <div class="wo-grid wo-grid--2" role="list">
           <div class="wo-card fragment fade-up" data-fragment-index="1" role="listitem">
@@ -218,7 +218,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: METODOLOGÍA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Metodología">
+      <section data-background-color="#1a1a1e" aria-label="Metodología">
         <h2>Nuestra <span class="accent">Metodología</span></h2>
         <ul class="wo-steps" role="list">
           <li class="fragment fade-up" data-fragment-index="1" role="listitem"><strong>Diagnóstico:</strong> Mapeamos tu proceso comercial actual. Identificamos fricciones.</li>
@@ -240,7 +240,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 7: INTEGRACIONES
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Integraciones">
+      <section data-background-color="#1a1a1e" aria-label="Integraciones">
         <h2>Integraciones <span class="accent">Clave</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -281,7 +281,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 8: PRECIOS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Paquetes y precios">
+      <section data-background-color="#1a1a1e" aria-label="Paquetes y precios">
         <h2>Paquetes de <span class="accent">Implementación</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -324,7 +324,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 9: CTA / CIERRE
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Llamado a la acción">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Llamado a la acción">
         <div class="wo-cta">
           <h1 class="wo-cta__title">¿Listo para un CRM que <span class="accent">funcione</span>?</h1>
           <p class="wo-cta__subtitle">Agenda una sesión de diagnóstico gratuita</p>
