--- a/hub/color-lab.html
+++ b/hub/color-lab.html
@@ -14,7 +14,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   
   <!-- Design Tokens -->
   <link rel="stylesheet" href="../wo-tokens.css">
@@ -123,7 +123,7 @@
             <span class="colorlab-presets__label">Colores Wo:</span>
             <button class="colorlab-preset" data-color="#FFCB00" style="background: #FFCB00;" title="Yellow Spark"></button>
             <button class="colorlab-preset" data-color="#5968EA" style="background: #5968EA;" title="Blue Lab"></button>
-            <button class="colorlab-preset" data-color="#1A1A2E" style="background: #1A1A2E;" title="Black Core"></button>
+            <button class="colorlab-preset" data-color="#2a2a2f" style="background: #2a2a2f;" title="Black Core"></button>
             <button class="colorlab-preset" data-color="#F7F7F7" style="background: #F7F7F7; border: 1px solid #333;" title="White Focus"></button>
             <button class="colorlab-preset" data-color="#333333" style="background: #333333;" title="Gray Dark"></button>
           </div>
@@ -181,8 +181,8 @@
             <div class="colorlab-contrast-input">
               <label>Color de Fondo</label>
               <div class="colorlab-picker__controls">
-                <input type="color" id="contrast-bg" value="#1A1A2E">
-                <input type="text" id="contrast-bg-hex" value="#1A1A2E">
+                <input type="color" id="contrast-bg" value="#2a2a2f">
+                <input type="text" id="contrast-bg-hex" value="#2a2a2f">
               </div>
             </div>
           </div>
