--- a/hub/index.html
+++ b/hub/index.html
@@ -14,7 +14,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   
   <!-- Design Tokens (Single Source of Truth) -->
   <link rel="stylesheet" href="../wo-tokens.css">
@@ -163,7 +163,7 @@
             <div class="hub-quick-link__icon"><svg viewBox="0 0 24 24"><path d="M5 6h14"/><path d="M12 6v12"/><path d="M8 18h8"/></svg></div>
             <div class="hub-quick-link__text">
               <div class="hub-quick-link__title">Tipografía</div>
-              <div class="hub-quick-link__desc">Space Grotesk, DM Sans, Inter, Gotham</div>
+              <div class="hub-quick-link__desc">Space Grotesk, Inter, Inter, Gotham</div>
             </div>
           </a>
           
@@ -258,7 +258,7 @@
             <div class="color-swatch__preview" style="background: var(--wo-black-core);"></div>
             <div class="color-swatch__info">
               <div class="color-swatch__name">Black Core</div>
-              <div class="color-swatch__hex">#1A1A2E</div>
+              <div class="color-swatch__hex">#2a2a2f</div>
             </div>
           </div>
           
@@ -365,7 +365,7 @@
                 <code style="font-size: 0.75rem; color: var(--wo-text-muted);">&lt;body data-wo-theme="yellow"&gt;</code>
                 <div style="display: flex; gap: 1rem; align-items: center; margin-top: 0.5rem;">
                   <div style="width: 40px; height: 40px; background: #FFCB00; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                    <span style="font-weight: bold; color: #0F0F1A;">1°</span>
+                    <span style="font-weight: bold; color: #1a1a1e;">1°</span>
                   </div>
                   <div style="width: 30px; height: 30px; background: #5968EA; border-radius: 6px; display: flex; align-items: center; justify-content: center;">
                     <span style="font-size: 0.7rem; color: white;">2°</span>
@@ -389,7 +389,7 @@
                     <span style="font-weight: bold; color: white;">1°</span>
                   </div>
                   <div style="width: 30px; height: 30px; background: #FFCB00; border-radius: 6px; display: flex; align-items: center; justify-content: center;">
-                    <span style="font-size: 0.7rem; color: #0F0F1A;">2°</span>
+                    <span style="font-size: 0.7rem; color: #1a1a1e;">2°</span>
                   </div>
                 </div>
                 <p style="font-size: 0.75rem; color: var(--wo-text-secondary); margin: 0;">Azul protagonista, amarillo secundario</p>
