--- a/hub/map-components.html
+++ b/hub/map-components.html
@@ -14,7 +14,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   
   <!-- Mapbox GL JS -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.js"></script>
@@ -380,7 +380,7 @@
             <div class="component-card__preview">
               <svg width="120" height="80" viewBox="0 0 120 80">
                 <circle cx="40" cy="35" r="22" fill="#FBBF24" stroke="rgba(255,255,255,0.3)" stroke-width="3"/>
-                <text x="40" y="40" text-anchor="middle" fill="#1A1A2E" font-family="Space Grotesk" font-weight="700" font-size="12">142</text>
+                <text x="40" y="40" text-anchor="middle" fill="#2a2a2f" font-family="Space Grotesk" font-weight="700" font-size="12">142</text>
                 <circle cx="85" cy="45" r="16" fill="#6366F1" stroke="rgba(255,255,255,0.3)" stroke-width="2"/>
                 <text x="85" y="50" text-anchor="middle" fill="#fff" font-family="Space Grotesk" font-weight="700" font-size="10">28</text>
                 <circle cx="70" cy="20" r="6" fill="#4338CA" stroke="#fff" stroke-width="2"/>
@@ -418,15 +418,15 @@
             <div class="component-card__preview" style="gap: 1rem;">
               <div style="display: flex; flex-direction: column; align-items: center;">
                 <div style="width: 24px; height: 28px; background: #FFCB00; border-radius: 50% 50% 50% 0; transform: rotate(-45deg);"></div>
-                <span style="font-size: 0.6rem; color: #64748B; margin-top: 8px;">Primary</span>
+                <span style="font-size: 0.6rem; color: #b4b6ba; margin-top: 8px;">Primary</span>
               </div>
               <div style="display: flex; flex-direction: column; align-items: center;">
                 <div style="width: 24px; height: 28px; background: #6366F1; border-radius: 50% 50% 50% 0; transform: rotate(-45deg);"></div>
-                <span style="font-size: 0.6rem; color: #64748B; margin-top: 8px;">Secondary</span>
+                <span style="font-size: 0.6rem; color: #b4b6ba; margin-top: 8px;">Secondary</span>
               </div>
               <div style="display: flex; flex-direction: column; align-items: center;">
                 <div style="width: 24px; height: 28px; background: #F97316; border-radius: 50% 50% 50% 0; transform: rotate(-45deg);"></div>
-                <span style="font-size: 0.6rem; color: #64748B; margin-top: 8px;">Alert</span>
+                <span style="font-size: 0.6rem; color: #b4b6ba; margin-top: 8px;">Alert</span>
               </div>
             </div>
             <p class="component-card__desc">Marcadores personalizados con animación de pulso opcional.</p>
@@ -493,7 +493,7 @@
                     <div class="wo-popup-compare__value" style="font-size: 1rem;">87</div>
                     <div class="wo-popup-compare__label">Zona A</div>
                   </div>
-                  <span style="color: #64748B; font-size: 0.7rem;">VS</span>
+                  <span style="color: #b4b6ba; font-size: 0.7rem;">VS</span>
                   <div class="wo-popup-compare__item" style="padding: 8px; border-radius: 6px; background: rgba(99,102,241,0.08);">
                     <div class="wo-popup-compare__value" style="font-size: 1rem;">62</div>
                     <div class="wo-popup-compare__label">Zona B</div>
@@ -619,7 +619,7 @@ WoLegend.bubble({
           </div>
           <div style="display: flex; align-items: center; gap: 1rem;">
             <span style="width: 100px; font-size: 0.75rem; color: var(--wo-text-secondary);">Divergent</span>
-            <div style="flex: 1; height: 20px; border-radius: 10px; background: linear-gradient(90deg, #06B6D4, #64748B, #F97316);"></div>
+            <div style="flex: 1; height: 20px; border-radius: 10px; background: linear-gradient(90deg, #06B6D4, #b4b6ba, #F97316);"></div>
             <code style="font-size: 0.7rem;">WO_MAP_SCALES.divergent</code>
           </div>
           <div style="display: flex; align-items: center; gap: 1rem;">
