--- a/hub/mapbox.html
+++ b/hub/mapbox.html
@@ -14,7 +14,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   
   <!-- Mapbox GL JS -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.js"></script>
@@ -309,7 +309,7 @@
         <h3 style="margin-top: 1.5rem; font-size: 0.85rem; color: var(--wo-text-secondary);">Base & Infraestructura</h3>
         <div class="color-mapping">
           <div class="color-mapping-item">
-            <div class="color-mapping-item__swatch" style="background: #0F0F1A;"></div>
+            <div class="color-mapping-item__swatch" style="background: #1a1a1e;"></div>
             <div class="color-mapping-item__info">
               <div class="color-mapping-item__name">Map Background</div>
               <div class="color-mapping-item__var">Dark (no negro puro)</div>
@@ -434,7 +434,7 @@
             <tr>
               <td><code>background</code></td>
               <td>background</td>
-              <td><span class="color-inline"><span class="color-dot" style="background:#0F0F1A;"></span> #0F0F1A</span></td>
+              <td><span class="color-inline"><span class="color-dot" style="background:#1a1a1e;"></span> #1a1a1e</span></td>
               <td>0</td>
             </tr>
             <tr>
@@ -458,7 +458,7 @@
             <tr>
               <td><code>building-3d</code></td>
               <td>fill-extrusion</td>
-              <td><span class="color-inline"><span class="color-dot" style="background:#1A1A2E;"></span> Black Core</span></td>
+              <td><span class="color-inline"><span class="color-dot" style="background:#2a2a2f;"></span> Black Core</span></td>
               <td>15</td>
             </tr>
             <tr>
@@ -654,7 +654,7 @@ map.addLayer({
           </div>
           <div class="code-block__content">
 <pre id="code-tokens">/* Map Base */
---map-background: #0F0F1A;
+--map-background: #1a1a1e;
 --map-water: #0D1B2A;
 
 /* Map Land Use */
@@ -662,11 +662,11 @@ map.addLayer({
 --map-landuse-commercial: rgba(89, 104, 234, 0.08);
 
 /* Map Buildings */
---map-building-fill: #1A1A2E;
+--map-building-fill: #2a2a2f;
 --map-building-outline: rgba(89, 104, 234, 0.2);
 
 /* Map Roads */
---map-road-street: #252542;
+--map-road-street: #333333;
 --map-road-secondary: #2D2D4A;
 --map-road-primary: #353560;
 --map-road-motorway: rgba(89, 104, 234, 0.5);
@@ -678,8 +678,8 @@ map.addLayer({
 
 /* Map Labels */
 --map-label-city: #F7F7F7;
---map-label-neighborhood: #94A3B8;
---map-label-street: #64748B;</pre>
+--map-label-neighborhood: #dadada;
+--map-label-street: #b4b6ba;</pre>
           </div>
         </div>
       </section>
