--- a/hub/templates.html
+++ b/hub/templates.html
@@ -14,7 +14,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   
   <!-- Design Tokens -->
   <link rel="stylesheet" href="../wo-tokens.css">
@@ -113,7 +113,7 @@
             <span class="hub-preview-card__badge">Template</span>
           </div>
           <div class="hub-preview-card__content">
-            <div style="background: radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%); border-radius: var(--radius-md); padding: 2rem; text-align: center;">
+            <div style="background: radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%); border-radius: var(--radius-md); padding: 2rem; text-align: center;">
               <img src="../LOGOS/logo dark@3x.png" alt="Logo" style="width: 60px; margin-bottom: 0.75rem; opacity: 0.9;">
               <div style="display: inline-block; padding: 0.25rem 0.6rem; background: var(--wo-accent-dim); border: 1px solid var(--wo-blue-lab); border-radius: var(--radius-full); font-family: var(--font-heading); font-size: 0.6rem; font-weight: 600; color: var(--wo-blue-lab); letter-spacing: 0.08em; text-transform: uppercase; margin-bottom: 0.5rem;">GEOINTELIGENCIA</div>
               <h1 style="font-family: var(--font-heading); font-size: 1.5rem; font-weight: 700; margin-bottom: 0.25rem;">Título <span style="color: var(--wo-blue-lab);">Destacado</span></h1>
@@ -131,7 +131,7 @@
             <span class="code-block__lang">HTML</span>
           </div>
           <div class="code-block__content">
-<pre id="code-cover">&lt;section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true"&gt;
+<pre id="code-cover">&lt;section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true"&gt;
   &lt;div class="wo-cover"&gt;
     &lt;img data-src="../LOGOS/logo dark@3x.png" alt="Workalógico" class="wo-cover__logo"&gt;
     &lt;div class="wo-badge"&gt;CATEGORÍA&lt;/div&gt;
@@ -165,7 +165,7 @@
             <span class="hub-preview-card__badge">Template</span>
           </div>
           <div class="hub-preview-card__content">
-            <div style="background: linear-gradient(135deg, #0F0F1A 0%, #252542 100%); border-radius: var(--radius-md); padding: 3rem 2rem; text-align: center;">
+            <div style="background: linear-gradient(135deg, #1a1a1e 0%, #333333 100%); border-radius: var(--radius-md); padding: 3rem 2rem; text-align: center;">
               <h1 style="font-family: var(--font-heading); font-size: 1.75rem; font-weight: 700; margin-bottom: 0.25rem;">Título de <span style="color: var(--wo-blue-lab);">Sección</span></h1>
               <p style="font-size: 0.9rem; color: var(--wo-text-secondary);">Descripción breve de lo que viene</p>
             </div>
@@ -180,7 +180,7 @@
             <span class="code-block__lang">HTML</span>
           </div>
           <div class="code-block__content">
-<pre id="code-section">&lt;section data-background-gradient="linear-gradient(135deg, #0F0F1A 0%, #252542 100%)" data-particles="true"&gt;
+<pre id="code-section">&lt;section data-background-gradient="linear-gradient(135deg, #1a1a1e 0%, #333333 100%)" data-particles="true"&gt;
   &lt;h1 class="wo-section__title"&gt;Título de &lt;span class="accent"&gt;Sección&lt;/span&gt;&lt;/h1&gt;
   &lt;p class="wo-section__subtitle"&gt;Descripción breve de lo que viene&lt;/p&gt;
 &lt;/section&gt;</pre>
@@ -199,7 +199,7 @@
             <span class="hub-preview-card__badge">Template</span>
           </div>
           <div class="hub-preview-card__content">
-            <div style="background: #0F0F1A; border-radius: var(--radius-md); padding: 1.5rem; position: relative;">
+            <div style="background: #1a1a1e; border-radius: var(--radius-md); padding: 1.5rem; position: relative;">
               <h2 style="font-family: var(--font-heading); font-size: 1.25rem; font-weight: 700; margin-bottom: 1rem;">Qué <span style="color: var(--wo-blue-lab);">Analizamos</span></h2>
               <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0.75rem;">
                 <div style="background: rgba(37, 37, 66, 0.5); border: 1px solid rgba(89, 104, 234, 0.3); border-radius: var(--radius-md); padding: 0.75rem;">
@@ -225,7 +225,7 @@
             <span class="code-block__lang">HTML</span>
           </div>
           <div class="code-block__content">
-<pre id="code-content">&lt;section data-background-color="#0F0F1A"&gt;
+<pre id="code-content">&lt;section data-background-color="#1a1a1e"&gt;
   &lt;h2&gt;Qué &lt;span class="accent"&gt;Analizamos&lt;/span&gt;&lt;/h2&gt;
   
   &lt;div class="wo-grid wo-grid--2"&gt;
@@ -258,7 +258,7 @@
             <span class="hub-preview-card__badge">Template</span>
           </div>
           <div class="hub-preview-card__content">
-            <div style="background: #0F0F1A; border-radius: var(--radius-md); padding: 1.5rem;">
+            <div style="background: #1a1a1e; border-radius: var(--radius-md); padding: 1.5rem;">
               <h2 style="font-family: var(--font-heading); font-size: 1.25rem; font-weight: 700; margin-bottom: 1rem;">Paquetes <span style="color: var(--wo-blue-lab);">Transparentes</span></h2>
               <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 0.75rem;">
                 <div style="background: rgba(37, 37, 66, 0.5); border: 1px solid rgba(89, 104, 234, 0.3); border-radius: var(--radius-md); padding: 0.75rem; text-align: center;">
@@ -293,7 +293,7 @@
             <span class="code-block__lang">HTML</span>
           </div>
           <div class="code-block__content">
-<pre id="code-pricing">&lt;section data-background-color="#0F0F1A"&gt;
+<pre id="code-pricing">&lt;section data-background-color="#1a1a1e"&gt;
   &lt;h2&gt;Paquetes &lt;span class="accent"&gt;Transparentes&lt;/span&gt;&lt;/h2&gt;
   
   &lt;div class="wo-grid wo-grid--3"&gt;
@@ -336,7 +336,7 @@
             <span class="hub-preview-card__badge">Template</span>
           </div>
           <div class="hub-preview-card__content">
-            <div style="background: radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%); border-radius: var(--radius-md); padding: 2.5rem; text-align: center;">
+            <div style="background: radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%); border-radius: var(--radius-md); padding: 2.5rem; text-align: center;">
               <h1 style="font-family: var(--font-heading); font-size: 1.5rem; font-weight: 700; margin-bottom: 0.25rem;">¿Listo para <span style="color: var(--wo-blue-lab);">empezar</span>?</h1>
               <p style="font-size: 0.95rem; color: var(--wo-text-secondary); margin-bottom: 1.25rem;">Agenda tu brief gratuito hoy</p>
               <div style="padding-top: 1rem; border-top: 1px solid rgba(255,255,255,0.1);">
@@ -355,7 +355,7 @@
             <span class="code-block__lang">HTML</span>
           </div>
           <div class="code-block__content">
-<pre id="code-cta">&lt;section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true"&gt;
+<pre id="code-cta">&lt;section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true"&gt;
   &lt;div class="wo-cta"&gt;
     &lt;h1 class="wo-cta__title"&gt;¿Listo para &lt;span class="accent"&gt;empezar&lt;/span&gt;?&lt;/h1&gt;
     &lt;p class="wo-cta__subtitle"&gt;Agenda tu brief gratuito hoy&lt;/p&gt;
@@ -382,7 +382,7 @@
             <span class="hub-preview-card__badge">Template</span>
           </div>
           <div class="hub-preview-card__content">
-            <div style="background: radial-gradient(ellipse at 30% 50%, #252542 0%, #0F0F1A 70%); border-radius: var(--radius-md); padding: 1.5rem;">
+            <div style="background: radial-gradient(ellipse at 30% 50%, #333333 0%, #1a1a1e 70%); border-radius: var(--radius-md); padding: 1.5rem;">
               <div style="display: grid; grid-template-columns: 1fr 1.2fr; gap: 1.5rem; align-items: center;">
                 <!-- Zona Izquierda: Teseracto -->
                 <div style="text-align: center;">
@@ -411,7 +411,7 @@
             <span class="code-block__lang">HTML</span>
           </div>
           <div class="code-block__content">
-<pre id="code-split">&lt;section data-background-gradient="radial-gradient(ellipse at 30% 50%, #252542 0%, #0F0F1A 70%)" 
+<pre id="code-split">&lt;section data-background-gradient="radial-gradient(ellipse at 30% 50%, #333333 0%, #1a1a1e 70%)" 
          data-particles="true" data-state="cover-slide"&gt;
   
   &lt;div class="wo-cover wo-cover--split"&gt;
@@ -561,13 +561,13 @@
           </div>
           <div class="code-block__content">
 <pre id="code-backgrounds">&lt;!-- Portada / CTA --&gt;
-data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)"
+data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)"
 
 &lt;!-- Sección / Transición --&gt;
-data-background-gradient="linear-gradient(135deg, #0F0F1A 0%, #252542 100%)"
+data-background-gradient="linear-gradient(135deg, #1a1a1e 0%, #333333 100%)"
 
 &lt;!-- Contenido estándar --&gt;
-data-background-color="#0F0F1A"
+data-background-color="#1a1a1e"
 
 &lt;!-- Activar partículas (solo portada, sección, CTA) --&gt;
 data-particles="true"</pre>
