--- a/hub/teseracto-elastic-demo.html
+++ b/hub/teseracto-elastic-demo.html
@@ -8,7 +8,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
   
   <!-- D3.js -->
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
@@ -22,10 +22,10 @@
       --wo-blue: #4a7fff;
       --wo-blue-glow: #6090ff;
       --wo-text: #FFFFFF;
-      --wo-text-secondary: #94A3B8;
-      --wo-text-muted: #64748B;
+      --wo-text-secondary: #dadada;
+      --wo-text-muted: #b4b6ba;
       --font-heading: 'Space Grotesk', sans-serif;
-      --font-body: 'DM Sans', sans-serif;
+      --font-body: 'Inter', sans-serif;
       --font-mono: 'JetBrains Mono', monospace;
     }
     
