--- a/hub/typography.html
+++ b/hub/typography.html
@@ -14,7 +14,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   
   <!-- Design Tokens -->
   <link rel="stylesheet" href="../wo-tokens.css">
@@ -173,7 +173,7 @@
 <pre>/* Variables tipográficas completas */
 :root {
   --font-heading: 'Space Grotesk', sans-serif;    /* Títulos */
-  --font-body: 'DM Sans', sans-serif;             /* Texto general */
+  --font-body: 'Inter', sans-serif;             /* Texto general */
   --font-body-alt: 'Inter', sans-serif;           /* UI/Datos */
   --font-corporate: 'Gotham', 'Space Grotesk';    /* Documentos formales */
 }</pre>
@@ -221,7 +221,7 @@
         <div class="type-sample">
           <div class="type-sample__label">
             <span class="type-sample__name">Small - Metadata</span>
-            <span class="type-sample__specs">DM Sans / 400 / 0.5em</span>
+            <span class="type-sample__specs">Inter / 400 / 0.5em</span>
           </div>
           <p class="type-sample__text" style="font-family: var(--font-body); font-size: 0.85rem; font-weight: 400; color: var(--wo-text-muted); line-height: 1.4;">Workalógico • Enero 2026</p>
         </div>
@@ -241,7 +241,7 @@
           </div>
           
           <div style="background: var(--wo-dark-surface); border-radius: var(--radius-md); padding: 1.5rem;">
-            <h4 style="font-family: var(--font-heading); font-size: 0.75rem; color: var(--wo-text-muted); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 1rem;">DM Sans</h4>
+            <h4 style="font-family: var(--font-heading); font-size: 0.75rem; color: var(--wo-text-muted); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 1rem;">Inter</h4>
             <p style="font-family: var(--font-body); font-weight: 400; font-size: 1.25rem; margin-bottom: 0.5rem;">Regular (400) - Párrafos</p>
             <p style="font-family: var(--font-body); font-weight: 500; font-size: 1.25rem; margin-bottom: 0.5rem;">Medium (500) - UI</p>
             <p style="font-family: var(--font-body); font-weight: 600; font-size: 1.25rem; margin-bottom: 0.5rem;">Semibold (600) - Énfasis</p>
@@ -263,7 +263,7 @@
 <pre id="html-fonts">&lt;!-- Cargar Google Fonts --&gt;
 &lt;link rel="preconnect" href="https://fonts.googleapis.com"&gt;
 &lt;link rel="preconnect" href="https://fonts.gstatic.com" crossorigin&gt;
-&lt;link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet"&gt;</pre>
+&lt;link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet"&gt;</pre>
           </div>
         </div>
         
