--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <style>
     :root {
       --wo-yellow-spark: #FFCB00;
-      --wo-black-core: #1A1A2E;
+      --wo-black-core: #2a2a2f;
       --wo-blue-lab: #5968EA;
       --wo-white-focus: #F7F7F7;
-      --wo-dark: #0F0F1A;
-      --wo-dark-elevated: #1A1A2E;
-      --wo-dark-surface: #252542;
+      --wo-dark: #1a1a1e;
+      --wo-dark-elevated: #2a2a2f;
+      --wo-dark-surface: #333333;
       --wo-text: #FFFFFF;
-      --wo-text-secondary: #94A3B8;
-      --wo-text-muted: #64748B;
+      --wo-text-secondary: #dadada;
+      --wo-text-muted: #b4b6ba;
       --font-heading: 'Space Grotesk', sans-serif;
-      --font-body: 'DM Sans', sans-serif;
+      --font-body: 'Inter', sans-serif;
     }
     
     * {
