--- a/deck-wo-ai-experts/index.html
+++ b/deck-wo-ai-experts/index.html
@@ -30,7 +30,7 @@
   <!-- Google Fonts with font-display swap -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Workalógico Design System -->
   <link rel="stylesheet" href="../wo-design-system.css">
@@ -51,7 +51,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 1: PORTADA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Portada">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Portada">
         <div class="wo-cover">
           <img data-src="../LOGOS/logo dark@3x.png" alt="Workalógico" class="wo-cover__logo" loading="lazy">
           <div class="wo-badge wo-badge--yellow" role="text">Nueva Oferta</div>
@@ -86,7 +86,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 2: EL PROBLEMA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="El problema">
+      <section data-background-color="#1a1a1e" aria-label="El problema">
         <h2>El Dilema de la <span class="danger">IA Empresarial</span></h2>
         <div class="wo-metrics-row" role="list" aria-label="Métricas del problema">
           <div class="wo-metric wo-metric--danger fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -116,7 +116,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 3: SECCIÓN - SOLUCIÓN
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="linear-gradient(135deg, #0F0F1A 0%, #252542 100%)" data-particles="true" aria-label="Nuestra solución">
+      <section data-background-gradient="linear-gradient(135deg, #1a1a1e 0%, #333333 100%)" data-particles="true" aria-label="Nuestra solución">
         <h1 class="wo-section__title">IA con <span class="accent">Resultado</span></h1>
         <p class="wo-section__subtitle">Implementación con método verificable. Valor medible.</p>
         
@@ -129,7 +129,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 4: SERVICIOS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Servicios">
+      <section data-background-color="#1a1a1e" aria-label="Servicios">
         <h2>Tres Pilares de <span class="accent">AI Experts</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -161,7 +161,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 5: DEMO INTERACTIVO - CHATBOT
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" data-state="chatbot-slide" aria-label="Demo de Agente">
+      <section data-background-color="#1a1a1e" data-state="chatbot-slide" aria-label="Demo de Agente">
         <div style="display: flex; gap: 2rem; align-items: flex-start;">
           <div style="flex: 1;">
             <h2 style="margin-bottom: 0.5em;">Prueba un <span class="accent">Agente</span></h2>
@@ -197,7 +197,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: AGENTES DE IA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Agentes de IA">
+      <section data-background-color="#1a1a1e" aria-label="Agentes de IA">
         <h2>Agentes de <span class="accent">IA</span></h2>
         <div class="wo-grid wo-grid--2" role="list">
           <div class="wo-card fragment fade-up" data-fragment-index="1" role="listitem">
@@ -231,7 +231,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: AI IMPLEMENTATION
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="AI Implementation">
+      <section data-background-color="#1a1a1e" aria-label="AI Implementation">
         <h2>AI <span class="accent">Implementation</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -273,7 +273,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 7: FORMACIÓN
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Formación">
+      <section data-background-color="#1a1a1e" aria-label="Formación">
         <h2>Formación y <span class="accent">Educación</span></h2>
         <div class="wo-grid wo-grid--2" role="list">
           <div class="wo-card fragment fade-up" data-fragment-index="1" role="listitem">
@@ -311,7 +311,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 8: PRECIOS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Paquetes y precios">
+      <section data-background-color="#1a1a1e" aria-label="Paquetes y precios">
         <h2>Inversión por <span class="accent">Servicio</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -352,7 +352,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 9: STACK TECNOLÓGICO
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Stack tecnológico">
+      <section data-background-color="#1a1a1e" aria-label="Stack tecnológico">
         <h2>Stack <span class="accent">Tecnológico</span></h2>
         <div class="wo-columns">
           <div class="wo-column fragment fade-up" data-fragment-index="1">
@@ -388,7 +388,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 10: CTA / CIERRE
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Llamado a la acción">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Llamado a la acción">
         <div class="wo-cta">
           <h1 class="wo-cta__title">¿Listo para <span class="accent">implementar IA</span>?</h1>
           <p class="wo-cta__subtitle">Agenda una sesión de descubrimiento gratuita</p>
