--- a/deck-wo-analisis-vocacion/index.html
+++ b/deck-wo-analisis-vocacion/index.html
@@ -30,7 +30,7 @@
   <!-- Google Fonts with font-display swap -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Workalógico Design System -->
   <link rel="stylesheet" href="../wo-design-system.css">
@@ -48,7 +48,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 1: PORTADA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Portada">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Portada">
         <div class="wo-cover">
           <img data-src="../LOGOS/logo dark@3x.png" alt="Workalógico" class="wo-cover__logo" loading="lazy">
           <h1 class="wo-cover__title">Análisis de Vocación <span class="accent">Geoestadístico</span></h1>
@@ -67,7 +67,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 2: EL PROBLEMA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="El costo de equivocarse">
+      <section data-background-color="#1a1a1e" aria-label="El costo de equivocarse">
         <h2>El Costo de <span class="danger">Equivocarse</span></h2>
         <div class="wo-metrics-row" role="list" aria-label="Métricas del problema">
           <div class="wo-metric wo-metric--danger fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -97,7 +97,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 3: LA PROMESA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="linear-gradient(135deg, #0F0F1A 0%, #252542 100%)" data-particles="true" aria-label="Nuestra promesa">
+      <section data-background-gradient="linear-gradient(135deg, #1a1a1e 0%, #333333 100%)" data-particles="true" aria-label="Nuestra promesa">
         <h1 class="wo-section__title">Nuestra <span class="accent">Promesa</span></h1>
         <p class="wo-section__subtitle">Identificamos la ubicación óptima basándonos en 500M+ data points.</p>
         <p class="wo-section__subtitle" style="margin-top: 1.2em;">Decisión con <strong class="accent">certeza</strong>, no intuición.</p>
@@ -114,7 +114,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 4: DIFERENCIADORES
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Diferenciadores">
+      <section data-background-color="#1a1a1e" aria-label="Diferenciadores">
         <h2>¿Por qué <span class="accent">Workalógico</span>?</h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -143,7 +143,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 5: DEMO INTERACTIVO - SCORING DE UBICACIONES
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" data-state="scoring-slide" aria-label="Demo scoring">
+      <section data-background-color="#1a1a1e" data-state="scoring-slide" aria-label="Demo scoring">
         <h2 style="margin-bottom: 0.3em;">Scoring de <span class="accent">Potencial</span></h2>
         <p style="color: var(--wo-text-secondary); font-size: 0.75em; margin-bottom: 0.8em;">
           Evaluación multi-criterio de ubicaciones
@@ -171,7 +171,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: METODOLOGÍA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Qué analizamos">
+      <section data-background-color="#1a1a1e" aria-label="Qué analizamos">
         <h2>Qué <span class="accent">Analizamos</span></h2>
         <div class="wo-grid wo-grid--2" role="list">
           <div class="wo-card fragment fade-up" data-fragment-index="1" role="listitem">
@@ -209,7 +209,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: ENTREGABLES
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Entregables">
+      <section data-background-color="#1a1a1e" aria-label="Entregables">
         <h2>Qué <span class="accent">Recibes</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -253,7 +253,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 7: CASOS DE ÉXITO
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Casos de éxito">
+      <section data-background-color="#1a1a1e" aria-label="Casos de éxito">
         <h2>Casos de <span class="accent">Éxito</span></h2>
         <div class="wo-grid wo-grid--2" role="list">
           <div class="wo-card fragment fade-up" data-fragment-index="1" role="listitem">
@@ -284,7 +284,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 8: PRECIOS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Paquetes y precios">
+      <section data-background-color="#1a1a1e" aria-label="Paquetes y precios">
         <h2>Paquetes y <span class="accent">Precios</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -322,7 +322,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 9: CLIENTES
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Clientes">
+      <section data-background-color="#1a1a1e" aria-label="Clientes">
         <h2>Empresas que <span class="accent">Confían</span></h2>
         <div class="wo-clients">
           <p class="wo-clients__list fragment fade-up">GAMESA • HEINZ • UNILEVER • GRUPO ALÉN • MODELORAMA • PASTES KIKOS</p>
@@ -343,7 +343,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 10: NEXT STEPS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Proceso">
+      <section data-background-color="#1a1a1e" aria-label="Proceso">
         <h2>¿Cómo <span class="accent">Empezamos</span>?</h2>
         <ul class="wo-steps" role="list">
           <li class="fragment fade-up" data-fragment-index="1" role="listitem"><strong>Brief Inicial:</strong> Call de 30 min para entender tu necesidad.</li>
@@ -368,7 +368,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 11: CTA / CIERRE
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Llamado a la acción">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Llamado a la acción">
         <div class="wo-cta">
           <h1 class="wo-cta__title">¿Listo para expandir con <span class="accent">certeza</span>?</h1>
           <p class="wo-cta__subtitle">Agenda tu brief gratuito hoy</p>
