--- a/deck-wo-marketing-digital/index.html
+++ b/deck-wo-marketing-digital/index.html
@@ -30,7 +30,7 @@
   <!-- Google Fonts with font-display swap -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Workalógico Design System -->
   <link rel="stylesheet" href="../wo-design-system.css">
@@ -48,7 +48,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 1: PORTADA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Portada">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Portada">
         <div class="wo-cover">
           <img data-src="../LOGOS/logo dark@3x.png" alt="Workalógico" class="wo-cover__logo" loading="lazy">
           <div class="wo-badge" role="text">Para PyMEs</div>
@@ -82,7 +82,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 2: EL PROBLEMA
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="El problema">
+      <section data-background-color="#1a1a1e" aria-label="El problema">
         <h2>El Problema de las <span class="danger">PyMEs</span></h2>
         <div class="wo-metrics-row" role="list" aria-label="Métricas del problema">
           <div class="wo-metric wo-metric--danger fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -111,7 +111,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 3: SECCIÓN - SOLUCIÓN
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="linear-gradient(135deg, #0F0F1A 0%, #252542 100%)" data-particles="true" aria-label="Nuestra solución">
+      <section data-background-gradient="linear-gradient(135deg, #1a1a1e 0%, #333333 100%)" data-particles="true" aria-label="Nuestra solución">
         <h1 class="wo-section__title">Marketing con <span class="accent">Estructura</span></h1>
         <p class="wo-section__subtitle">No somos agencia. Operamos como sistema de crecimiento.</p>
         
@@ -124,7 +124,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 4: DIFERENCIADORES
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Diferenciadores">
+      <section data-background-color="#1a1a1e" aria-label="Diferenciadores">
         <h2>¿Por qué <span class="accent">Workalógico</span>?</h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -153,7 +153,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 5: DEMO INTERACTIVO - DASHBOARD DE MÉTRICAS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" data-state="dashboard-slide" aria-label="Demo dashboard">
+      <section data-background-color="#1a1a1e" data-state="dashboard-slide" aria-label="Demo dashboard">
         <h2 style="margin-bottom: 0.5em;">Tu <span class="accent">Dashboard</span> en Tiempo Real</h2>
         <p style="color: var(--wo-text-secondary); font-size: 0.75em; margin-bottom: 1em;">
           Métricas de una campaña real PyME (30 días)
@@ -179,7 +179,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: SERVICIOS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Servicios">
+      <section data-background-color="#1a1a1e" aria-label="Servicios">
         <h2>Qué <span class="accent">Hacemos</span></h2>
         <div class="wo-grid wo-grid--2" role="list">
           <div class="wo-card fragment fade-up" data-fragment-index="1" role="listitem">
@@ -217,7 +217,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 6: PROCESO
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Proceso">
+      <section data-background-color="#1a1a1e" aria-label="Proceso">
         <h2>Cómo <span class="accent">Trabajamos</span></h2>
         <ul class="wo-steps" role="list">
           <li class="fragment fade-up" data-fragment-index="1" role="listitem"><strong>Semana 1-2:</strong> Diagnóstico de tu negocio, competencia y cliente ideal.</li>
@@ -239,7 +239,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 7: CASOS DE USO
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Casos de uso">
+      <section data-background-color="#1a1a1e" aria-label="Casos de uso">
         <h2>Industrias que <span class="accent">Atendemos</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" role="listitem">
@@ -280,7 +280,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 8: PRECIOS
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-color="#0F0F1A" aria-label="Paquetes y precios">
+      <section data-background-color="#1a1a1e" aria-label="Paquetes y precios">
         <h2>Paquetes <span class="accent">Claros</span></h2>
         <div class="wo-grid wo-grid--3" role="list">
           <div class="wo-card fragment zoom-in" data-fragment-index="1" role="listitem">
@@ -319,7 +319,7 @@
       <!-- ═══════════════════════════════════════════════════════════════
            SLIDE 9: CTA / CIERRE
            ═══════════════════════════════════════════════════════════════ -->
-      <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Llamado a la acción">
+      <section data-background-gradient="radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%)" data-particles="true" aria-label="Llamado a la acción">
         <div class="wo-cta">
           <h1 class="wo-cta__title">¿Listo para <span class="accent">vender más</span>?</h1>
           <p class="wo-cta__subtitle">Agenda tu diagnóstico gratuito de 30 minutos</p>
