--- a/hub/particles.html
+++ b/hub/particles.html
@@ -14,7 +14,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   
   <!-- Design Tokens + Design System -->
   <link rel="stylesheet" href="../wo-tokens.css">
@@ -27,7 +27,7 @@
     .particles-demo {
       position: relative;
       height: 200px;
-      background: radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%);
+      background: radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%);
       border-radius: var(--radius-md);
       overflow: hidden;
     }
@@ -277,7 +277,7 @@
 &lt;/section&gt;
 
 &lt;!-- Slide de contenido SIN partículas --&gt;
-&lt;section data-background-color="#0F0F1A"&gt;
+&lt;section data-background-color="#1a1a1e"&gt;
   ...
 &lt;/section&gt;
 
