--- a/hub/pricing-components.html
+++ b/hub/pricing-components.html
@@ -14,7 +14,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   
   <!-- Design Tokens + Design System -->
   <link rel="stylesheet" href="../wo-tokens.css">
@@ -546,7 +546,7 @@ function animatePriceCounter(element) {
             <button class="hub-btn hub-btn--small hub-btn--copy" onclick="copyCode(this, 'code-reveal')">Copiar</button>
           </div>
           <div class="code-block__content">
-<pre id="code-reveal">&lt;section data-background-gradient="linear-gradient(135deg, #0F0F1A 0%, #252542 100%)" 
+<pre id="code-reveal">&lt;section data-background-gradient="linear-gradient(135deg, #1a1a1e 0%, #333333 100%)" 
          data-state="pricing-slide"&gt;
   &lt;h2&gt;Inversión &lt;span class="accent"&gt;Mensual&lt;/span&gt;&lt;/h2&gt;
   
