--- a/hub/teseracto-4d-demo.html
+++ b/hub/teseracto-4d-demo.html
@@ -8,7 +8,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
   
   <!-- Anime.js -->
   <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.2/lib/anime.min.js"></script>
@@ -18,16 +18,16 @@
   
   <style>
     :root {
-      --wo-dark: #0F0F1A;
-      --wo-dark-elevated: #1A1A2E;
-      --wo-dark-surface: #252542;
+      --wo-dark: #1a1a1e;
+      --wo-dark-elevated: #2a2a2f;
+      --wo-dark-surface: #333333;
       --wo-yellow: #FFCB00;
       --wo-blue: #5968EA;
       --wo-text: #FFFFFF;
       --wo-text-secondary: #94A3B8;
       --wo-text-muted: #64748B;
       --font-heading: 'Space Grotesk', sans-serif;
-      --font-body: 'DM Sans', sans-serif;
+      --font-body: 'Inter', sans-serif;
       --font-mono: 'JetBrains Mono', monospace;
     }
     
@@ -49,7 +49,7 @@
       align-items: center;
       justify-content: center;
       position: relative;
-      background: radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%);
+      background: radial-gradient(ellipse at center, #333333 0%, #1a1a1e 70%);
     }
     
     .hero__bg {
